--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
         "nodemon": "^2.0.6"
     },
     "dependencies": {
+        "@material-ui/icons": "^4.11.2",
         "axios": "^0.21.0",
+        "compression": "^1.7.4",
         "express": "^4.16.3",
         "if-env": "^1.0.4",
-        "mongoose": "^5.8.11"
+        "mongoose": "^5.8.11",
+        "morgan": "^1.10.0",
+        "react-router-dom": "^5.2.0"
     }
 }
