--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "book-search",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
     "@material-ui/core": "^4.11.2",
