--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
     },
     "author": "",
     "license": "MIT",
-    "devDependencies": {
-        "concurrently": "^5.3.0",
-        "nodemon": "^2.0.6"
-    },
     "dependencies": {
+        "concurrently": "^5.3.0",
+        "nodemon": "^2.0.6",
         "axios": "^0.21.0",
         "compression": "^1.7.4",
         "express": "^4.16.3",
