--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
         "start:prod": "node server.js",
         "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
         "client": "cd client && npm run start",
-        "seed": "node scripts/seedDB.js",
         "install": "cd client && npm install",
         "build": "cd client && npm run build",
-        "heroku-postbuild": "npm run build"
+        "heroku-postbuild": "npm run build",
+        "nodemon":"node server.js"
     },
-    "author": "",
+    "author": "Santiago Castaneda Munoz",
     "license": "MIT",
     "dependencies": {
         "concurrently": "^5.3.0",
